--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/leofardo/todo-list-nodejs#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
